--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.24.12",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "png-to-ico": "^3.0.1",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
